# market-intelligence-crew

./: .env  .gitignore  README.md  README1.md  pyproject.toml
app/: crew_runner.py  main.py
app/static/: index.html
src/market_intel_crew/: crew.py  main.py
src/market_intel_crew/agents/: competitive_analyst.py  market_researcher.py
src/market_intel_crew/config/: agents.yaml  settings.yaml  tasks.yaml
src/market_intel_crew/tasks/: analyst_tasks.py  research_tasks.py
src/market_intel_crew/tools/: analyst_tools.py  research_tools.py
src/market_intel_crew/utils/: config_loader.py  llm_config.py  logger.py  utils.py
src/market_inteligence_crew/: crew.py  main.py
src/market_inteligence_crew/agents/: market_researcher.py
src/market_inteligence_crew/config/: settings.py  settings.yaml
src/market_inteligence_crew/utils/: config_loader.py  llm_config.py  logger.py
